@@ -23,7 +23,7 @@ OBJS  = bioscon.o serial.o lp.o xt_key.o init.o dircon.o ntty.o mem.o meta.o \
 	tcpdev.o pty.o bell.o # clist.o tty.o
 endif
 
-all:	chr_dev.a
+all:	chr_drv.a
 
 chr_drv.a: $(OBJS)
 	ar rcs chr_drv.a $(OBJS)
